# coretia

./: .gitignore  README.md  pyproject.toml
coretia/: __init__.py  assay_quality.py  bayesian.cp311-win_amd64.pyd  bootstrap.py  datahandling.py  nl_model.py  plot.py  process.py
coretia/data/: __init__.py  generate_all.py
coretia/data/Fig2_MCMC/: adk9.toml  basic_comparing_neutralization_levels.py  caption.docx  generate_fig.py  nd50_['Human', 'Macaque']_nd50_ci_cv_method_paper.pkl
coretia/data/Fig3_moi/: caption.docx  generate_fig.py  moi_aav1_human1.toml  moi_aav5_human2.toml  moi_aav9_human3.toml  moi_nluc.toml  moi_nluc_fluc.toml
coretia/data/Fig3_moi/sample_toml/: moi1000_aav1_human1.toml  moi1000_aav5_human2.toml  moi1000_aav9_human3.toml  moi100_aav1_human1.toml  moi100_aav5_human2.toml  moi100_aav9_human3.toml  moi10_aav1_human1.toml  moi10_aav5_human2.toml  moi10_aav9_human3.toml  moi_aav1.toml  moi_aav5.toml  moi_aav9.toml  moi_fluc.toml
coretia/data/Fig4_params/: 24h_48h.toml  caption.docx  generate_fig.py  heat_inactivation.toml  mix_inctime.toml
coretia/data/Fig5_extrapol/: caption.docx  extrapolate_nd50.py  generate_fig.py  mouse.toml
coretia/data/plate_data/: 24h.xlsx  48h.xlsx  adk9.xlsx  heatinactivation.xlsx  mix_incubationtime.xlsx  moi_aav1_aav9.xlsx  moi_aav1_aav9_human.xlsx  moi_aav5.xlsx  moi_aav5_human.xlsx  moi_fluc.xlsx  mouse_day1.xlsx  mouse_day2.xlsx  mouse_day3.xlsx
coretia/tutorials/: 1_show_plate_and_curve.py  2_show_nd50.py  3_compare_curves.py  4_bayesian_equivalence_test.py  README.md  __init__.py  adk9.toml
(+10 files in other folders)
