[project]
name = "coretia"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "fire>=0.7.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pymc>=5.22.0",
    "python-docx>=1.1.2",
    "scipy>=1.15.2",
    "wellmap>=3.5.2",
]
